2026/01/15までの歴史追加

--- a/history/term4/print1.html
+++ b/history/term4/print1.html
@@ -7,30 +7,30 @@
 </head>
 
 <body>
-  
+
   <script src="header.js"></script>
 
   <main class="hist-main">
     <h1 id="産業革命と資本主義の定着">産業革命と資本主義の定着</h1>
     <h2 id="課題">■課題</h2>
     <p>日本の産業革命の特徴は何だろうか。</p>
-    <button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
+    <button class="toggle-all-btn">すべて表示する</button>
     <h3 id="日本における産業革命">日本における産業革命</h3>
     <ul>
-      <li>日清戦争と日露戦争前後の時代は，日本国内において近代的な工場での生産が急速に発展する<span class="toggle-text" onclick="toggleText(this)">産業革命
-        </span>の時代であった</li>
+      <li>日清戦争と日露戦争前後の時代は，日本国内において近代的な工場での生産が急速に発展する<span class="toggle-text">産業革命
+      </span>の時代であった</li>
       <li>松方財政での深刻な不況は，1886年ごろからしだいに回復し，紡績や製糸業などの工業が発展</li>
     </ul>
     <h3 id="紡績製糸業の発展">紡績・製糸業の発展</h3>
     <ul>
-      <li>1883年，<span class="toggle-text" onclick="toggleText(this)">大阪紡績会社 </span>が操業を開始，輸入の紡績機械を使って，これまでにない規模で生産を行った
+      <li>1883年，<span class="toggle-text">大阪紡績会社</span>が操業を開始，輸入の紡績機械を使って，これまでにない規模で生産を行った
       </li>
-      <li><span class="toggle-text" onclick="toggleText(this)">機械制紡績 </span>は，手工業的な紡績業にかわって拡大，綿糸の生産高は1890年には輸入高を上まわった
+      <li><span class="toggle-text">機械制紡績</span>は，手工業的な紡績業にかわって拡大，綿糸の生産高は1890年には輸入高を上まわった
         <ul>
           <li>→日清戦争後に朝鮮や中国への綿糸の輸出がさかんになると，1897年には輸出高が輸入高を上まわった</li>
         </ul>
       </li>
-      <li>製糸業でも，1894年に<span class="toggle-text" onclick="toggleText(this)">器械製糸 </span>による生糸の生産量が従来の座繰製糸を上まわり，輸出量も増大した
+      <li>製糸業でも，1894年に<span class="toggle-text">器械製糸</span>による生糸の生産量が従来の座繰製糸を上まわり，輸出量も増大した
       </li>
     </ul>
     <h3 id="織物業では">織物業では</h3>
@@ -44,12 +44,12 @@
     </ul>
     <h3 id="金本位制の確立">金本位制の確立</h3>
     <ul>
-      <li>政府は1897年，日清戦争の賠償金をもとに貨幣制度をあらため，銀本位制にかわり，先進国と同じ<span class="toggle-text" onclick="toggleText(this)">金本位制
-        </span>を確立</li>
+      <li>政府は1897年，日清戦争の賠償金をもとに貨幣制度をあらため，銀本位制にかわり，先進国と同じ<span class="toggle-text">金本位制
+      </span>を確立</li>
     </ul>
     <h3 id="出遅れた重工業の発達">出遅れた重工業の発達</h3>
     <ul>
-      <li>政府は1901年に，賠償金の一部をあてて，九州の筑豊炭田近くに官営の<span class="toggle-text" onclick="toggleText(this)">八幡製鉄所 </span>を完成させた
+      <li>政府は1901年に，賠償金の一部をあてて，九州の筑豊炭田近くに官営の<span class="toggle-text">八幡製鉄所</span>を完成させた
         <ul>
           <li>…鉄鋼生産の国産化をめざした</li>
         </ul>
@@ -58,8 +58,8 @@
     <h3 id="交通機関の発達">交通機関の発達</h3>
     <ul>
       <li>鉄道事業では1880年代から民間資本が進出</li>
-      <li>官営の<span class="toggle-text" onclick="toggleText(this)">東海道線 </span>が全通した1889年には，民間鉄道の営業キロ数が官営を上まわった</li>
-      <li>1906年には<span class="toggle-text" onclick="toggleText(this)">鉄道国有 </span>を制定，全国の主要幹線の私鉄17社が翌年までに国有化された
+      <li>官営の<span class="toggle-text">東海道線</span>が全通した1889年には，民間鉄道の営業キロ数が官営を上まわった</li>
+      <li>1906年には<span class="toggle-text">鉄道国有</span>を制定，全国の主要幹線の私鉄17社が翌年までに国有化された
         <ul>
           <li>…軍事上・経済上の不便が多かったため</li>
         </ul>
@@ -76,14 +76,14 @@
     </ul>
     <h3 id="財閥の形成">財閥の形成</h3>
     <ul>
-      <li>三井・三菱・住友・安田などの政商は，さまざまな業種に進出することによって金融・貿易・運輸・鉱山などを経営する<span class="toggle-text" onclick="toggleText(this)">財閥
-        </span>を形成するようになった</li>
+      <li>三井・三菱・住友・安田などの政商は，さまざまな業種に進出することによって金融・貿易・運輸・鉱山などを経営する<span class="toggle-text">財閥
+      </span>を形成するようになった</li>
       <li>財閥は，官営工場や鉱山の払い下げを受けることもあった</li>
     </ul>
     <h3 id="賃金労働者の増加">賃金労働者の増加</h3>
     <ul>
       <li>資本主義が発達すると，賃金労働者が増加</li>
-      <li>繊維産業で働く労働者の大部分は女性(<span class="toggle-text" onclick="toggleText(this)">女工 </span>)だった
+      <li>繊維産業で働く労働者の大部分は女性(<span class="toggle-text">女工</span>)だった
         <ul>
           <li>…賃金は低く，紡績業では１日２交代制の12時間，製糸業では15〜18時間の労働に従事していた</li>
         </ul>
@@ -92,20 +92,20 @@
     </ul>
     <h3 id="労働組合の結成">労働組合の結成</h3>
     <ul>
-      <li>日清戦争後には，労働組合が結成されるようになり，賃金引き上げや労働条件の改善を求める<span class="toggle-text" onclick="toggleText(this)">労働争議 </span>が増加
+      <li>日清戦争後には，労働組合が結成されるようになり，賃金引き上げや労働条件の改善を求める<span class="toggle-text">労働争議</span>が増加
       </li>
-      <li>1897年，<span class="toggle-text" onclick="toggleText(this)">高野房太郎 </span>・<span class="toggle-text"
-          onclick="toggleText(this)">片山潜 </span>らは<span class="toggle-text" onclick="toggleText(this)">労働組合期成会
-        </span>をつくり，労働組合の結成をよびかけた</li>
+      <li>1897年，<span class="toggle-text">高野房太郎</span>・<span class="toggle-text">片山潜</span>らは<span
+          class="toggle-text">労働組合期成会
+      </span>をつくり，労働組合の結成をよびかけた</li>
     </ul>
     <h3 id="労働争議への政府の対応">労働争議への政府の対応</h3>
     <ul>
-      <li>1900年，政府は<span class="toggle-text" onclick="toggleText(this)">治安警察法 </span>を制定
+      <li>1900年，政府は<span class="toggle-text">治安警察法</span>を制定
         <ul>
           <li>→集会・結社を制限して労働者の団結権・争議権を事実上否認した</li>
         </ul>
       </li>
-      <li>一方で，日露戦争後には，1911年に最初の労働者保護立法である<span class="toggle-text" onclick="toggleText(this)">工場法 </span>を公布（1916年施行）
+      <li>一方で，日露戦争後には，1911年に最初の労働者保護立法である<span class="toggle-text">工場法</span>を公布（1916年施行）
         <ul>
           <li>→12歳未満の就業禁止，女性・年少者の深夜業の廃止など，労働条件に規制を加えた</li>
         </ul>
@@ -120,9 +120,8 @@
     <h3 id="小作農と寄生地主">小作農と寄生地主</h3>
     <ul>
       <li>資本主義の発達で生活はしだいに豊かになったが，副業に従事して収入をおぎなうなど，小作人の生活は困難であった</li>
-      <li>地主は，困窮した農民から農地を買い集めて小作地を増大させ，大規模な地主は耕作からはなれて小作料収入に依存する<span class="toggle-text"
-          onclick="toggleText(this)">寄生地主
-        </span>となった</li>
+      <li>地主は，困窮した農民から農地を買い集めて小作地を増大させ，大規模な地主は耕作からはなれて小作料収入に依存する<span class="toggle-text">寄生地主
+      </span>となった</li>
       <li>寄生地主は，資産を株式や公債に投資したり，企業をおこしたりして，資本主義との結びつきを深めた</li>
     </ul>
   </main>
