--- a/history/term4/print4.html
+++ b/history/term4/print4.html
@@ -9,7 +9,7 @@
 <body>
 
   <script src="header.js"></script>
-  
+
   <main class="hist-main">
     <h1 id="日露戦争後の社会と政治">日露戦争後の社会と政治</h1>
     <h2 id="課題">■課題</h2>
@@ -31,16 +31,18 @@
     <h3 id="社会問題の発生">社会問題の発生</h3>
     <ul>
       <li>栃木県の足尾銅山で，鉱毒が渡良瀬川などに流れこんで流域に大きな被害をおよぼした</li>
-      <li>被害を受けた農民は，栃木県選出の衆議院議員の〔〕を先頭に，鉱毒防止と被害民の救済を求める運動をおこした</li>
+      <li>被害を受けた農民は，栃木県選出の衆議院議員の<span class="toggle-text">田中正造</span>を先頭に，鉱毒防止と被害民の救済を求める運動をおこした</li>
     </ul>
     <h3 id="社会主義思想への注目">社会主義思想への注目</h3>
     <ul>
-      <li>〔〕・〔〕・〔〕らは，1901年，軍備縮小・普通選挙実施などをとなえて，〔〕を結成
+      <li><span class="toggle-text">安部磯雄</span>・<span class="toggle-text">片山潜</span>・<span
+          class="toggle-text">幸徳秋水</span>らは，1901年，軍備縮小・普通選挙実施などをとなえて，<span class="toggle-text">社会民主党</span>を結成
         <ul>
           <li>→最初の社会主義政党であったが，治安警察法によってただちに解散を命じられた</li>
         </ul>
       </li>
-      <li>〔〕を創設した〔〕らは，1906年，最初の合法的社会主義政党である〔〕を結成した
+      <li><span class="toggle-text">平民社</span>を創設した<span class="toggle-text">堺利彦</span>らは，1906年，最初の合法的社会主義政党である<span
+          class="toggle-text">日本社会党</span>を結成した
         <ul>
           <li>→翌年に解散を命じられた</li>
         </ul>
@@ -48,7 +50,7 @@
     </ul>
     <h3 id="不安定化する社会への対応">不安定化する社会への対応</h3>
     <ul>
-      <li>政府は，農民対策として，1908年に〔〕を出し，〔〕を展開
+      <li>政府は，農民対策として，1908年に<span class="toggle-text">戊申詔書</span>を出し，<span class="toggle-text">地方改良運動</span>を展開
         <ul>
           <li>…農村の町村財政の改革や農業の改良をめざした</li>
         </ul>
@@ -61,43 +63,6 @@
     </ul>
     <ul>
       <li>政府は社会主義運動の弾圧に乗り出し，事件以降，社会主義運動は沈滞，「冬の時代」へ入った</li>
-    </ul>
-    <h3 id="桂園時代">桂園時代</h3>
-    <ul>
-      <li>日露戦争を主導した第１次〔〕内閣はポーツマス条約の批准後に総辞職，立憲政友会党首の〔〕が内閣を組織した</li>
-      <li>以後，桂と西園寺が交互に内閣を担当する〔〕が1913年までつづいた
-        <ul>
-          <li>…不安定な社会を背景に，桂の藩閥勢力と，西園寺の政友会が妥協をくりかえすことで政権を運営した</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="桂園時代の終わり">桂園時代の終わり</h3>
-    <ul>
-      <li>第２次西園寺内閣は，陸軍の２個師団増設要求を認めなかった
-        <ul>
-          <li>→陸軍は反発，陸軍大臣を辞任させ，後任者を推薦しなかったため，内閣は総辞職した</li>
-        </ul>
-      </li>
-      <li>1912年末，ふたたび桂が首相となったが，権力の濫用との批判がおこり，「閥族打破・憲政擁護」の世論が高まった</li>
-    </ul>
-    <h3 id="第一次護憲運動">第一次護憲運動</h3>
-    <ul>
-      <li>…政友会の〔〕，立憲国民党の〔〕らは〔〕をおこし，都市民衆が呼応して暴動がおこった</li>
-    </ul>
-    <h3 id="大正政変">大正政変</h3>
-    <ul>
-      <li>桂は新しい政党（のちの立憲同志会）を組織して，運動に対処しようとしたが，総辞職した（〔〕）</li>
-      <li>その後，政友会の支持を背景に，海軍大将の〔〕が内閣を組織した</li>
-    </ul>
-    <h3 id="山本権兵衛内閣とジーメンス事件">山本権兵衛内閣とジーメンス事件</h3>
-    <ul>
-      <li>山本内閣は〔〕を改め，現役でない陸海軍大・中将が大臣につくことを可能にした</li>
-      <li>文官任用令を改正し，政党勢力の拡大への道を開いた</li>
-      <li>1914年，海軍の汚職事件（〔〕）が発覚すると，批判する民衆運動が高まり，山本内閣は退陣
-        <ul>
-          <li>→山県有朋ら元老は，大隈重信を起用し，大隈は立憲同志会を与党として内閣を組織した</li>
-        </ul>
-      </li>
     </ul>
   </main>
 
