--- a/history/term4/print6.html
+++ b/history/term4/print6.html
@@ -9,14 +9,14 @@
 <body>
 
   <script src="header.js"></script>
-  
+
   <main class="hist-main">
     <h1 id="国際社会のなかの日本">国際社会のなかの日本</h1>
     <h2 id="課題">■課題</h2>
     <h3 id="この時期の日本外交が国際社会のなかでめざしたものは何だったのだろうか">この時期の日本外交が，国際社会のなかでめざしたものは何だったのだろうか。</h3>
     <h3 id="第２次大隈内閣">第２次大隈内閣</h3>
     <ul>
-      <li>第２次大隈内閣は，1915年，〔〕政府に軍事的な圧力をかけつつ，〔〕を示した
+      <li>第２次大隈内閣は，1915年，<span class="toggle-text">袁世凱〕政府に軍事的な圧力をかけつつ，二十一か条の要求</span>を示した
         <ul>
           <li>…第一次世界大戦を機に中国での権益の拡大をはかった</li>
         </ul>
@@ -38,7 +38,7 @@
       <li>大隈内閣はやがて，日本が影響力を行使しやすい政権の成立をねらって袁世凱政権の打倒を画策</li>
       <li>1916年に成立した寺内正毅内閣は，袁世凱の死後に後継者となった段祺瑞を支援する方針に転じた
         <ul>
-          <li>→民間人の西原亀三を通じて巨額の借款を中国にあたえた（〔〕）</li>
+          <li>→民間人の西原亀三を通じて巨額の借款を中国にあたえた（<span class="toggle-text">西原借款</span>）</li>
         </ul>
       </li>
     </ul>
@@ -55,7 +55,7 @@
     <ul>
       <li>ロシアとは1916年に第４次日露協約を結んだ
         <ul>
-          <li>→1917年の〔〕で社会主義のソヴィエト政権が成立すると，協約は破棄された</li>
+          <li>→1917年の<span class="toggle-text">ロシア革命</span>で社会主義のソヴィエト政権が成立すると，協約は破棄された</li>
         </ul>
       </li>
       <li>日本はアメリカ・イギリス・フランスとともに，シベリアに出兵，ソヴィエト政権に対抗した
@@ -67,12 +67,12 @@
     <h3 id="国際連盟の発足">国際連盟の発足</h3>
     <ul>
       <li>1918年，ドイツで帝政が崩壊，第一次世界大戦は日本を含む連合国側が勝利をおさめた</li>
-      <li>翌年，パリで講和会議が開かれ，〔〕調印
+      <li>翌年，パリで講和会議が開かれ，<span class="toggle-text">ヴェルサイユ条約</span>調印
         <ul>
-          <li>…日本は，山東省のドイツの権益を受けつぎ，赤道以北の旧ドイツ領南洋諸島の〔〕をえた</li>
+          <li>…日本は，山東省のドイツの権益を受けつぎ，赤道以北の旧ドイツ領南洋諸島の<span class="toggle-text">委任統治権</span>をえた</li>
         </ul>
       </li>
-      <li>アメリカ大統領ウィルソンの提唱で〔〕の創立が決定，1920年に発足した
+      <li>アメリカ大統領ウィルソンの提唱で<span class="toggle-text">国際連盟</span>の創立が決定，1920年に発足した
         <ul>
           <li>…日本は，常任理事国の一つとなった</li>
         </ul>
@@ -80,9 +80,9 @@
     </ul>
     <h3 id="中国の五四運動">中国の五・四運動</h3>
     <ul>
-      <li>中国は山東省の権益の返還を主張したが，〔〕で無視された
+      <li>中国は山東省の権益の返還を主張したが，<span class="toggle-text">パリ講和会議</span>で無視された
         <ul>
-          <li>→1919年５月の北京での学生集会をきっかけに，中国各地でストライキや日本製品のボイコット運動がおこった（〔〕）</li>
+          <li>→1919年５月の北京での学生集会をきっかけに，中国各地でストライキや日本製品のボイコット運動がおこった（<span class="toggle-text">五・四運動</span>）</li>
           <li>…日本は中国の権利をおびやかす存在の象徴に</li>
         </ul>
       </li>
@@ -92,7 +92,7 @@
       <li>大戦後，「民族自決」の機運が高まった</li>
       <li>朝鮮でも，1919年３月１日，京城（現在のソウル）で知識人や学生らが日本からの独立を宣言
         <ul>
-          <li>→これに刺激を受けて独立を求める運動が，朝鮮全土に広がった（〔〕）</li>
+          <li>→これに刺激を受けて独立を求める運動が，朝鮮全土に広がった（<span class="toggle-text">三・一独立運動</span>）</li>
         </ul>
       </li>
       <li>朝鮮総督府は原内閣のもと，武断統治から文化政治への転換をかかげたが，運動は根強くつづいた</li>
@@ -110,7 +110,7 @@
       </li>
       <li>アメリカは，日本の勢力拡大をおさえ，海軍軍縮をはかるため，国際会議の開催を提唱した
         <ul>
-          <li>→1921年から翌年にかけて〔〕を開催</li>
+          <li>→1921年から翌年にかけて<span class="toggle-text">ワシントン会議</span>を開催</li>
         </ul>
       </li>
     </ul>
@@ -131,20 +131,20 @@
     <ul>
       <li>５か国が海軍軍縮条約を結び，主力艦（戦艦）の保有比率をアメリカ・イギリス５，日本３，フランス・イタリア１.６７と定めた
         <ul>
-          <li>→こうして成立した国際秩序を〔〕とよぶ</li>
+          <li>→こうして成立した国際秩序を<span class="toggle-text">ワシントン体制</span>とよぶ</li>
           <li>→日本はこれに歩調をあわせる方針をとった</li>
         </ul>
       </li>
     </ul>
     <h3 id="幣原外交">幣原外交</h3>
     <ul>
-      <li>1924年に加藤高明内閣が成立すると，ワシントン会議の全権であった〔〕が外務大臣となった</li>
-      <li>幣原は田中義一内閣期をのぞき，1931年まで外相をつとめ，イギリス・アメリカに〔〕を展開した
+      <li>1924年に加藤高明内閣が成立すると，ワシントン会議の全権であった<span class="toggle-text">幣原喜重郎</span>が外務大臣となった</li>
+      <li>幣原は田中義一内閣期をのぞき，1931年まで外相をつとめ，イギリス・アメリカに<span class="toggle-text">協調外交</span>を展開した
         <ul>
           <li>…中国に対しても内政不干渉の協調姿勢をとったが，経済権益は積極的に維持した</li>
         </ul>
       </li>
-      <li>1925年，〔〕，ソ連との国交を樹立した
+      <li>1925年，<span class="toggle-text">日ソ基本条約</span>，ソ連との国交を樹立した
         <ul>
           <li>→シベリア鉄道経由でヨーロッパとの往来もさかんに</li>
         </ul>
@@ -169,17 +169,17 @@
     <ul>
       <li>1927年に首相となった立憲政友会の田中義一は，外相を兼任した</li>
       <li>対英米では協調外交を継承したが，対中政策では強硬姿勢をとり，対中政策を策定する東方会議を開いた</li>
-      <li>北伐から満洲における日本の権益を守るため，山東省在留日本人の保護を名目に〔〕を行った</li>
+      <li>北伐から満洲における日本の権益を守るため，山東省在留日本人の保護を名目に<span class="toggle-text">山東出兵</span>を行った</li>
     </ul>
     <h3 id="済南事件">済南事件</h3>
     <ul>
       <li>1928年に北伐が再開されると，日本は第２次・第３次山東出兵を行った</li>
-      <li>第２次出兵の際に，済南で日本軍と北伐軍の武力衝突がおこった（〔〕）</li>
+      <li>第２次出兵の際に，済南で日本軍と北伐軍の武力衝突がおこった（<span class="toggle-text">済南事件</span>）</li>
     </ul>
     <h3 id="張作霖爆殺事件">張作霖爆殺事件</h3>
     <ul>
-      <li>〔〕の一部将校は満洲の直接支配をくわだてた</li>
-      <li>1928年６月，彼らは張作霖を奉天郊外で列車ごと爆破して殺害した（〔〕）
+      <li><span class="toggle-text">関東軍</span>の一部将校は満洲の直接支配をくわだてた</li>
+      <li>1928年６月，彼らは張作霖を奉天郊外で列車ごと爆破して殺害した（<span class="toggle-text">張作霖爆殺事件</span>）
         <ul>
           <li>→張作霖の後継者となった張学良は挑発にのらず，関東軍のねらいは失敗した</li>
           <li>→張学良は国民政府に帰順，中国はほぼ統一された</li>
@@ -195,7 +195,7 @@
           <li>→日本は孤立し，対英米協調外交もゆらいだ</li>
         </ul>
       </li>
-      <li>中国では〔〕が高まった</li>
+      <li>中国では<span class="toggle-text">日貨排斥運動</span>が高まった</li>
     </ul>
 
   </main>
