--- a/history/term4/print7.html
+++ b/history/term4/print7.html
@@ -9,7 +9,7 @@
 <body>
 
   <script src="header.js"></script>
-  
+
   <main class="hist-main">
     <h1 id="中国侵略と戦時体制への移行">中国侵略と戦時体制への移行</h1>
     <h2 id="課題">■課題</h2>
@@ -27,7 +27,7 @@
     <ul>
       <li>第２次若槻内閣時の1931年９月18日，関東軍は奉天郊外の柳条湖で南満洲鉄道の線路を爆破した
         <ul>
-          <li>→中国軍の行為と主張して軍事行動を開始（〔〕）</li>
+          <li>→中国軍の行為と主張して軍事行動を開始（<span class="toggle-text">満州事変</span>）</li>
         </ul>
       </li>
     </ul>
@@ -39,9 +39,9 @@
     </ul>
     <h3 id="満洲国の成立">「満洲国」の成立</h3>
     <ul>
-      <li>1932年初め，関東軍は満洲の主要部を占領，３月，清朝皇帝〔〕を「執政」とする「満洲国」を成立させた</li>
+      <li>1932年初め，関東軍は満洲の主要部を占領，３月，清朝皇帝<span class="toggle-text">溥儀</span>を「執政」とする「満洲国」を成立させた</li>
       <li>犬養内閣は満洲国の承認に慎重な態度をとった</li>
-      <li>次の斎藤内閣は，９月，〔〕をとりかわして満洲国を承認</li>
+      <li>次の斎藤内閣は，９月，<span class="toggle-text">日満議定書</span>をとりかわして満洲国を承認</li>
       <li>満洲での日本の従来の権益すべてを確認させ，日満両国の共同防衛と日本軍の駐屯を認めさせた
         <ul>
           <li>…「五族協和」をかかげたが，日本の傀儡政権であった</li>
@@ -54,16 +54,16 @@
     </ul>
     <h3 id="国際連盟からの脱退">国際連盟からの脱退</h3>
     <ul>
-      <li>1933年２月の総会で，〔〕にもとづき，満洲に対する中国の主権の確認と日本軍の撤兵を勧告することが採択された
+      <li>1933年２月の総会で，<span class="toggle-text">リットン報告書</span>にもとづき，満洲に対する中国の主権の確認と日本軍の撤兵を勧告することが採択された
         <ul>
-          <li>→〔〕ら日本全権団はその場から退場</li>
-          <li>→翌月，日本は〔〕を通告した</li>
+          <li>→<span class="toggle-text">松岡洋右</span>ら日本全権団はその場から退場</li>
+          <li>→翌月，日本は<span class="toggle-text">国際連盟からの脱退</span>を通告した</li>
         </ul>
       </li>
     </ul>
     <h3 id="塘沽停戦協定">塘沽停戦協定</h3>
     <ul>
-      <li>日本は1933年５月，中国とのあいだで〔〕を結び，満洲占領を事実上認めさせた</li>
+      <li>日本は1933年５月，中国とのあいだで<span class="toggle-text">塘沽停戦協定</span>を結び，満洲占領を事実上認めさせた</li>
     </ul>
     <h3 id="華北分離工作">華北分離工作</h3>
     <ul>
@@ -76,13 +76,13 @@
         <ul>
           <li>→1937年２月，陸軍の林銑十郎が内閣を組織</li>
           <li>→政党と軍部の対立をおさめられず4か月ほどで退陣</li>
-          <li>→６月，貴族院議長の〔〕が内閣を組織した</li>
+          <li>→６月，貴族院議長の<span class="toggle-text">近衛文麿</span>が内閣を組織した</li>
         </ul>
       </li>
     </ul>
     <h3 id="盧溝橋事件">盧溝橋事件</h3>
     <ul>
-      <li>1937年７月７日，北京郊外の盧溝橋で日中両国軍の武力衝突がおこり，〔〕が始まった</li>
+      <li>1937年７月７日，北京郊外の盧溝橋で日中両国軍の武力衝突がおこり，<span class="toggle-text">日中戦争</span>が始まった</li>
     </ul>
     <h3 id="日中戦争開戦">日中戦争開戦</h3>
     <ul>
@@ -92,7 +92,7 @@
           <li>→８月には上海の中国軍と衝突した（第２次上海事変）</li>
         </ul>
       </li>
-      <li>中国では，1937年９月に国民党と共産党の提携が実現（第２次国共合作），結成された〔〕が頑強な抵抗をつづけた</li>
+      <li>中国では，1937年９月に国民党と共産党の提携が実現（第２次国共合作），結成された<span class="toggle-text">抗日民族統一戦線</span>が頑強な抵抗をつづけた</li>
     </ul>
     <h3 id="南京事件">南京事件</h3>
     <ul>
