--- a/history/term4/print2.html
+++ b/history/term4/print2.html
@@ -9,11 +9,12 @@
 <body>
 
   <script src="header.js"></script>
-  
+
   <main class="hist-main">
     <h1 id="教育制度の整備と新しい文化">教育制度の整備と新しい文化</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="社会の変化は文化や思想にどのような影響をあたえたのだろうか">社会の変化は，文化や思想にどのような影響をあたえたのだろうか。</h3>
+    <p>社会の変化は，文化や思想にどのような影響をあたえたのだろうか。</p>
+    <button class="toggle-all-btn">すべて表示する</button>
     <h3 id="学校令">学校令</h3>
     <ul>
       <li>1886年，文部大臣森有礼のもとで制定
@@ -26,7 +27,7 @@
     </ul>
     <h3 id="国家主義的教育">国家主義的教育</h3>
     <ul>
-      <li>教育政策は国家主義を重視する傾向を強め，1890年には「教育ニ関スル勅語」（〔〕）が出された
+      <li>教育政策は国家主義を重視する傾向を強め，1890年には「教育ニ関スル勅語」（<span class="toggle-text">教育勅語</span>）が出された
         <ul>
           <li>…忠君愛国が教育の目的として強調された</li>
         </ul>
@@ -46,94 +47,17 @@
     <h3 id="ナショナリズムの高まり">ナショナリズムの高まり</h3>
     <ul>
       <li>日清戦争とその勝利，政府の教育政策を通じて，人々は，日本という国家のまとまりを強く意識した</li>
-      <li>国家の命運と自分自身の利害とを同一のものと感じるような態度や，国民としての意識（〔〕）が日本社会に定着していった</li>
+      <li>国家の命運と自分自身の利害とを同一のものと感じるような態度や，国民としての意識（<span class="toggle-text">ナショナリズム</span>）が日本社会に定着していった</li>
     </ul>
     <h3 id="ナショナリズムの思想家とメディア">ナショナリズムの思想家とメディア</h3>
     <ul>
-      <li>1887年，民友社の〔〕は雑誌『〔〕』を刊行，国民形成のための平民主義を説いた</li>
-      <li>政教社の〔〕や〔〕らは雑誌『〔〕』（のち『日本及日本人』）を発行し，国粋主義をとなえて欧化政策を批判した</li>
+      <li>1887年，民友社の<span class="toggle-text">徳富蘇峰</span>は雑誌『<span class="toggle-text">国民之友</span>』を刊行，国民形成のための平民主義を説いた
+      </li>
+      <li>政教社の<span class="toggle-text">三宅雪嶺</span>や<span class="toggle-text">志賀重昂</span>らは雑誌『<span
+          class="toggle-text">日本人</span>』（のち『日本及日本人』）を発行し，国粋主義をとなえて欧化政策を批判した</li>
       <li>日清戦争が始まると，新聞は戦地の戦局を報じ，熱狂的な支持をえて部数をのばした
         <ul>
           <li>…新聞・雑誌はナショナリズムの成立をささえた</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="文学者たちの活動">文学者たちの活動</h3>
-    <ul>
-      <li>文学者たちは，近代の確立という課題に，個人の内面という方向から取り組もうとした</li>
-      <li>〔〕は1885年の『〔〕』で，文学を宗教や道徳から解放し，写実を重んじることを主張</li>
-      <li>新しい思想を表現するための新しい文章が必要とされ，〔〕が発生した
-        <ul>
-          <li>…〔〕はその代表だった</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="言文一致に対して">言文一致に対して</h3>
-    <ul>
-      <li>尾崎紅葉を中心とする硯友社は，写実主義をかかげつつ江戸文芸の伝統を受けついで，人情の機微をえがこうとした</li>
-      <li>〔〕は芸術と人生の理想を追求した</li>
-    </ul>
-    <h3 id="その他の文学">その他の文学</h3>
-    <ul>
-      <li>個性を重んじ，自我の解放をとなえる〔〕があらわれ，詩では〔〕，短歌では〔〕・〔〕，小説では〔〕らが活躍した</li>
-      <li>〔〕や〔〕らは，社会の現実をありのままにえがこうとする〔〕の立場に立った</li>
-      <li>〔〕と〔〕の小説は，西洋近代と日本という二つの文化のあいだの緊張関係に立つ知識人のあり方を表現した</li>
-    </ul>
-    <h3 id="詩歌では">詩歌では</h3>
-    <ul>
-      <li>〔〕が貧窮生活のなかにある自己の悲哀や苦悩を表現した短歌や詩を通じ，社会の矛盾を表現した</li>
-      <li>〔〕は俳句の革新運動をおこし，近代俳句を発展させた</li>
-    </ul>
-    <h3 id="日本美術の再評価と岡倉天心">日本美術の再評価と岡倉天心</h3>
-    <ul>
-      <li>ナショナリズムの思潮は，日本美術の価値を再考させるきっかけともなった</li>
-      <li>アメリカ人フェノロサは，〔〕と協力して日本画の復興につとめ，1887年に日本画を重視した〔〕が設立された
-        <ul>
-          <li>…天心は〔〕や〔〕ら優れた画家をもり立て伝統美術を革新しつつ発展させようとした</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="日本美術院">日本美術院</h3>
-    <ul>
-      <li>1898年に岡倉天心と橋本雅邦らは日本美術院を創立</li>
-      <li>これに参加した〔〕と〔〕は日本画に洋画の手法をとりいれ，生彩ある画風を示した</li>
-    </ul>
-    <h3 id="彫刻では">彫刻では</h3>
-    <ul>
-      <li>〔〕らが伝統的な木彫を近代彫刻として再興</li>
-      <li>ロダンに師事した〔〕（碌山）は，洋風の近代彫刻を制作して注目された</li>
-    </ul>
-    <h3 id="西洋絵画では">西洋絵画では</h3>
-    <ul>
-      <li>フランスから帰国して，印象派の明るい画風を紹介した〔〕らが，1896年に白馬会を結成，洋画発展の基礎を築いた</li>
-    </ul>
-    <h3 id="西洋音楽では">西洋音楽では</h3>
-    <ul>
-      <li>幕末に軍楽として輸入され，明治維新以後は軍楽隊の演奏で一般に知られるようになった</li>
-      <li>学校教育にも〔〕としてとりいれられ，1887年には〔〕が設立された</li>
-    </ul>
-    <h3 id="演劇では">演劇では</h3>
-    <ul>
-      <li>歌舞伎が人気を集めていたが，明治初期，〔〕は文明開化の風俗を題材にした作品を発表した</li>
-      <li>９代目〔〕ら一部の歌舞伎俳優は，官僚や知識人と協力し，演劇改良運動を推進した</li>
-      <li>歌舞伎に対する現代劇として〔〕がおこった</li>
-      <li>新劇運動がおこり，〔〕らは文芸協会，〔〕らは自由劇場を結成，近代劇を確立する努力を重ねた</li>
-    </ul>
-    <h3 id="神道の扱い">神道の扱い</h3>
-    <ul>
-      <li>明治初期に推進された神道国教化政策は，欧米列強の圧力や，〔〕ら仏教界などの批判によって挫折した</li>
-      <li>大日本帝国憲法では信教の自由が規定された
-        <ul>
-          <li>…政府は神道を信教の自由の枠外に置き，神社をほかの宗教と異なる特別な扱いにした</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="新政府とキリスト教">新政府とキリスト教</h3>
-    <ul>
-      <li>信教の自由を認めた大日本帝国憲法の発布のもと，布教活動だけでなく，教育や慈善運動などにも積極的に取り組むようになった</li>
-      <li>1891年には内村鑑三が教育勅語に敬礼しなかったとして第一高等中学校講師の職を追われた
-        <ul>
-          <li>…キリスト教は国家の政策と対立し，圧迫を受けることもあった</li>
         </ul>
       </li>
     </ul>
