--- a/history/term4/print3.html
+++ b/history/term4/print3.html
@@ -9,7 +9,7 @@
 <body>
 
   <script src="header.js"></script>
-  
+
   <main class="hist-main">
     <h1 id="日露戦争と帝国日本">日露戦争と帝国日本</h1>
     <h2 id="課題">■課題</h2>
@@ -18,10 +18,10 @@
     <ul>
       <li>19世紀後半，イギリスを追いドイツやアメリカで資本主義が急速に発達，製鉄や電気，機械，鉄道などの産業が成長
         <ul>
-          <li>→〔〕は，資源の獲得や投資市場を求めてアジアやアフリカなどへ経済進出を強めた</li>
+          <li>→<span class="toggle-text">列強</span>は，資源の獲得や投資市場を求めてアジアやアフリカなどへ経済進出を強めた</li>
         </ul>
       </li>
-      <li>軍事力でアジア，アフリカ各地を植民地や勢力範囲に組み込むような膨張政策を〔〕という</li>
+      <li>軍事力でアジア，アフリカ各地を植民地や勢力範囲に組み込むような膨張政策を<span class="toggle-text">帝国主義</span>という</li>
     </ul>
     <h3 id="列強の中国進出">列強の中国進出</h3>
     <ul>
@@ -32,7 +32,7 @@
     <h3 id="義和団戦争">義和団戦争</h3>
     <ul>
       <li>列強の中国分割に対し，清では排外運動がさかんとなり，「扶清滅洋」をとなえる義和団が蜂起</li>
-      <li>1900年に，義和団が北京の各国公使館を包囲し，清が宣戦を布告すると，日本を主力とする８か国の連合軍が北京を占領してこれを鎮圧した（〔〕）</li>
+      <li>1900年に，義和団が北京の各国公使館を包囲し，清が宣戦を布告すると，日本を主力とする８か国の連合軍が北京を占領してこれを鎮圧した（<span class="toggle-text">義和団事件</span>）</li>
       <li>翌年，清は北京議定書に調印，９億８千万両の賠償金の支払いと各国の華北における駐兵権を認めた</li>
     </ul>
     <h3 id="ロシアの満洲進出と日英同盟">ロシアの満洲進出と日英同盟</h3>
@@ -44,7 +44,7 @@
       </li>
       <li>政府内で，満韓交換論や，イギリスと結んでロシアに対抗する方策が模索された
         <ul>
-          <li>→後者の立場にもとづき，1902年，〔〕が結ばれた</li>
+          <li>→後者の立場にもとづき，1902年，<span class="toggle-text">日英同盟</span>が結ばれた</li>
         </ul>
       </li>
     </ul>
@@ -55,7 +55,7 @@
           <li>…社会主義者の幸徳秋水や堺利彦，キリスト教徒の内村鑑三らは反戦論をとなえた</li>
         </ul>
       </li>
-      <li>日露間の交渉は決裂，1904年２月，〔〕開戦
+      <li>日露間の交渉は決裂，1904年２月，<span class="toggle-text">日露戦争</span>開戦
         <ul>
           <li>→日本軍は苦戦を重ねながらも戦局を有利に展開した</li>
         </ul>
@@ -63,7 +63,7 @@
     </ul>
     <h3 id="日露戦争の展開">日露戦争の展開</h3>
     <ul>
-      <li>日本軍は翌年１月に旅順を陥落させ，３月の奉天会戦でロシア軍主力をやぶり，５月の〔〕でバルチック艦隊を壊滅させた
+      <li>日本軍は翌年１月に旅順を陥落させ，３月の奉天会戦でロシア軍主力をやぶり，５月の<span class="toggle-text">日本海海戦</span>でバルチック艦隊を壊滅させた
         <ul>
           <li>…このころ日本の戦力は限界に達し，ロシアも国内の革命運動などのために戦争の継続が困難になった</li>
         </ul>
@@ -72,7 +72,7 @@
     </ul>
     <h3 id="ポーツマス条約の締結">ポーツマス条約の締結</h3>
     <ul>
-      <li>1905年９月，〔〕締結</li>
+      <li>1905年９月，<span class="toggle-text">ポーツマス条約</span>締結</li>
       <li>
         ロシアは，(1)韓国における日本の優越権を認め，（2）旅順・大連の租借権，長春以南の鉄道と付属の利権を，清の同意をえて日本に譲り渡し，(3)北緯50度以南の樺太（サハリン）と，(4)沿海州・カムチャツカ沿岸の漁業権とを日本にあたえることを認めた
         <ul>
@@ -82,25 +82,25 @@
     </ul>
     <h3 id="日本による韓国支配">日本による韓国支配</h3>
     <ul>
-      <li>日露戦争さなかの1904年，日本は第１次〔〕を結び，顧問を派遣して韓国の財政と外交に介入した</li>
-      <li>1905年，第２次日韓協約によって韓国を保護国として外交権を掌握して漢城に〔〕を設置し，初代統監に伊藤博文が就任した</li>
+      <li>日露戦争さなかの1904年，日本は第１次<span class="toggle-text">日韓協約</span>を結び，顧問を派遣して韓国の財政と外交に介入した</li>
+      <li>1905年，第２次日韓協約によって韓国を保護国として外交権を掌握して漢城に<span class="toggle-text">統監府</span>を設置し，初代統監に伊藤博文が就任した</li>
       <li>1907年のハーグ密使事件で韓国皇帝の高宗は退位</li>
       <li>第３次日韓協約によって，内政はすべて統監府がにぎり，軍隊にも解散を命じた</li>
     </ul>
     <h3 id="韓国の抵抗と併合">韓国の抵抗と併合</h3>
     <ul>
-      <li>日本の韓国支配に対して，韓国国民のあいだから〔〕がおこったが，日本は軍隊を出動させて鎮圧した</li>
+      <li>日本の韓国支配に対して，韓国国民のあいだから<span class="toggle-text">義兵運動</span>がおこったが，日本は軍隊を出動させて鎮圧した</li>
       <li>1909年には，ハルビンで前統監の伊藤博文が民族運動指導者の安重根に殺害される事件がおこった</li>
-      <li>1910年，日本は軍事力を背景に〔〕した
+      <li>1910年，日本は軍事力を背景に<span class="toggle-text">韓国を併合</span>した
         <ul>
-          <li>→〔〕が設置され，初代総督には陸軍の寺内正毅が任命された</li>
+          <li>→<span class="toggle-text">朝鮮総督府</span>が設置され，初代総督には陸軍の寺内正毅が任命された</li>
         </ul>
       </li>
     </ul>
     <h3 id="帝国主義国日本と台湾">帝国主義国日本と台湾</h3>
     <ul>
       <li>日清・日露戦争と韓国併合によって，日本は東アジアに植民地を領有する帝国主義国となった</li>
-      <li>日清戦争で獲得した台湾には，統治機関として〔〕が設置された
+      <li>日清戦争で獲得した台湾には，統治機関として<span class="toggle-text">台湾総督府</span>が設置された
         <ul>
           <li>…経済的には，日本の資本家が進出し，製糖業などで利益をあげた</li>
         </ul>
@@ -113,7 +113,7 @@
           <li>…所有権の不明確を理由に土地を接収，拓殖事業も進めた</li>
         </ul>
       </li>
-      <li>国策会社である〔〕は農業経営や金融事業を実施し，鉄道建設や沿岸航路の開設も本格化した</li>
+      <li>国策会社である<span class="toggle-text">東洋拓殖会社</span>は農業経営や金融事業を実施し，鉄道建設や沿岸航路の開設も本格化した</li>
       <li>学校では，日本史や日本語が必修となり，朝鮮の文化や歴史は軽視された</li>
     </ul>
     <h3 id="植民地では">植民地では</h3>
@@ -124,8 +124,8 @@
     </ul>
     <h3 id="日本の植民地経営">日本の植民地経営</h3>
     <ul>
-      <li>日本がロシアから利権を継承した遼東半島の租借地は関東州と名づけられ，旅順に〔〕が置かれた</li>
-      <li>ロシアから獲得した南満洲の鉄道を経営するため，1906年，〔〕（満鉄）が設立された
+      <li>日本がロシアから利権を継承した遼東半島の租借地は関東州と名づけられ，旅順に<span class="toggle-text">関東都督府</span>が置かれた</li>
+      <li>ロシアから獲得した南満洲の鉄道を経営するため，1906年，<span class="toggle-text">南満州鉄道株式会社</span>（満鉄）が設立された
         <ul>
           <li>…鉄道の独占的経営や炭鉱の開発などを行った</li>
         </ul>
@@ -135,10 +135,11 @@
     <h3 id="日本の植民地と複雑化する対外関係">日本の植民地と複雑化する対外関係</h3>
     <ul>
       <li>日本が南満洲に利権を獲得すると，門戸開放をとなえるアメリカとの関係は悪化</li>
-      <li>ロシアは日本に接近，４次にわたる〔〕を結んで，満洲と蒙古における両国の勢力範囲を定めた</li>
-      <li>1911年，中国で〔〕がおこって〔〕が建国
+      <li>ロシアは日本に接近，４次にわたる<span class="toggle-text">日露協約</span>を結んで，満洲と蒙古における両国の勢力範囲を定めた</li>
+      <li>1911年，中国で<span class="toggle-text">辛亥革命</span>がおこって<span class="toggle-text">中華民国</span>が建国
         <ul>
-          <li>→日本は，〔〕にかわって実権をにぎった〔〕を支持し，勢力範囲を東部内蒙古にまで広げた</li>
+          <li>→日本は，<span class="toggle-text">孫文</span>にかわって実権をにぎった<span
+              class="toggle-text">袁世凱</span>を支持し，勢力範囲を東部内蒙古にまで広げた</li>
         </ul>
       </li>
     </ul>
