--- a/history/term4/print5.html
+++ b/history/term4/print5.html
@@ -9,16 +9,16 @@
 <body>
 
   <script src="header.js"></script>
-  
+
   <main class="hist-main">
     <h1 id="都市化重工業化と生活の変化">都市化・重工業化と生活の変化</h1>
     <h2 id="課題">■課題</h2>
     <h3 id="この時期に生じた産業や社会の変化の特徴を考えてみよう">この時期に生じた，産業や社会の変化の特徴を考えてみよう。</h3>
     <h3 id="第一次世界大戦">第一次世界大戦</h3>
     <ul>
-      <li>1914年におこった〔〕は，1918年まで４年あまりの長期にわたった</li>
+      <li>1914年におこった<span class="toggle-text">第一次世界大戦</span>は，1918年まで４年あまりの長期にわたった</li>
       <li>産業化が進んだヨーロッパ各国は，より強力な兵器を大量に生産して戦場に送ることで勝利をえようとした</li>
-      <li>国家の持つすべての人的・物的資源を動員して戦う「〔〕」が展開され，非戦闘員も戦争にまきこまれた
+      <li>国家の持つすべての人的・物的資源を動員して戦う「<span class="toggle-text">総戦力</span>」が展開され，非戦闘員も戦争にまきこまれた
         <ul>
           <li>…ぼう大な犠牲者と，深刻な社会の疲弊をまねいた</li>
         </ul>
@@ -26,29 +26,30 @@
     </ul>
     <h3 id="第一次世界大戦と日本">第一次世界大戦と日本</h3>
     <ul>
-      <li>日本は第２次大隈重信内閣のもと，〔〕を根拠に連合国側に加わってドイツに宣戦布告
+      <li>日本は第２次大隈重信内閣のもと，<span class="toggle-text">日英同盟</span>を根拠に連合国側に加わってドイツに宣戦布告
         <ul>
-          <li>→1914年のうちに中国におけるドイツの拠点都市であった〔〕とドイツ領南洋諸島の一部を占領</li>
+          <li>→1914年のうちに中国におけるドイツの拠点都市であった<span class="toggle-text">青島</span>とドイツ領南洋諸島の一部を占領</li>
         </ul>
       </li>
       <li>他国に比べて戦死者の数は少なく，国土も戦場にならず，総力戦を経験することはなかった</li>
     </ul>
     <h3 id="大戦景気">大戦景気</h3>
     <ul>
-      <li>日本経済は，輸出が大幅に増加，〔〕を迎えた</li>
+      <li>日本経済は，輸出が大幅に増加，<span class="toggle-text">大戦景気</span>を迎えた</li>
       <li>綿布は，ヨーロッパ諸国の輸出量が減少し，中国・東南アジア・アフリカの市場に日本製品が進出した</li>
       <li>生糸の輸出は，アメリカが戦場とならず好景気となったため激増した</li>
       <li>大戦中から，貿易が黒字となり，船舶輸送などサービス取引も大きな利益をもたらした
         <ul>
-          <li>→債務国から〔〕へと転じ，〔〕（金）保有高も急増した</li>
+          <li>→債務国から<span class="toggle-text">債権国</span>へと転じ，<span class="toggle-text">正貨</span>（金）保有高も急増した</li>
         </ul>
       </li>
     </ul>
     <h3 id="日本の重化学工業">日本の重化学工業</h3>
     <ul>
-      <li>第一次世界大戦は日本の〔〕が進むきっかけとなった</li>
+      <li>第一次世界大戦は日本の<span class="toggle-text">重化学工業化</span>が進むきっかけとなった</li>
       <li>大戦で世界的に船舶が不足したことで，日本の海運業と造船業は急速に成長</li>
-      <li>1920年の〔〕や1923年の〔〕などたびかさなる経済危機にもかかわらず，強い国際競争力を持つ産業となった</li>
+      <li>1920年の<span class="toggle-text">戦後恐慌</span>や1923年の<span
+          class="toggle-text">関東大震災</span>などたびかさなる経済危機にもかかわらず，強い国際競争力を持つ産業となった</li>
     </ul>
     <h3 id="鉄鋼業では">鉄鋼業では</h3>
     <ul>
@@ -57,7 +58,7 @@
           <li>→戦後になると八幡製鉄所を拡張，民間でも日本鋼管などの企業が成長した</li>
         </ul>
       </li>
-      <li>満鉄は鉄鉱石の採掘権を中国に認めさせ，〔〕を設立した</li>
+      <li>満鉄は鉄鉱石の採掘権を中国に認めさせ，<span class="toggle-text">鞍山製鉄所</span>を設立した</li>
     </ul>
     <h3 id="化学工業では">化学工業では</h3>
     <ul>
@@ -65,23 +66,23 @@
     </ul>
     <h3 id="電気の普及">電気の普及</h3>
     <ul>
-      <li>1915年に完成した福島県の〔〕は，東京へ安価な電力を供給する先がけとなった</li>
+      <li>1915年に完成した福島県の<span class="toggle-text">猪苗代水力発電所</span>は，東京へ安価な電力を供給する先がけとなった</li>
       <li>電力会社は，競争のために発電所を大規模化するとともに中小電力会社を統合，1920年代には寡占が進んだ</li>
     </ul>
     <h3 id="企業集団の出現">企業集団の出現</h3>
     <ul>
-      <li>三井・三菱・住友の三大財閥は，同族が経営する〔〕が傘下企業の株式を保有，市場を支配</li>
+      <li>三井・三菱・住友の三大財閥は，同族が経営する<span class="toggle-text">持株会社</span>が傘下企業の株式を保有，市場を支配</li>
     </ul>
     <h3 id="軽工業の革新">軽工業の革新</h3>
     <ul>
       <li>綿紡績業では企業合同が進み，三大紡が成立した</li>
-      <li>国内の賃金が上昇したため，大戦後，安価な労働力を求めて中国に紡績会社を設立した（〔〕）</li>
+      <li>国内の賃金が上昇したため，大戦後，安価な労働力を求めて中国に紡績会社を設立した（<span class="toggle-text">在華紡</span>）</li>
       <li>製糸業では1920年代後半以降に，多条機が導入され，アメリカへの輸出がのびた</li>
     </ul>
     <h3 id="都市問題の発生">都市問題の発生</h3>
     <ul>
-      <li>都市への人口集中や市街地の拡大により，交通・衛生・治安・経済などの面で，〔〕が発生</li>
-      <li>1919年，〔〕が制定され，開発が始まった</li>
+      <li>都市への人口集中や市街地の拡大により，交通・衛生・治安・経済などの面で，<span class="toggle-text">都市問題</span>が発生</li>
+      <li>1919年，<span class="toggle-text">都市計画法</span>が制定され，開発が始まった</li>
       <li>1923年９月１日におこった関東大震災は東京や横浜に大きな被害をもたらした
         <ul>
           <li>→復興事業によって都心部の道路が拡張され，鉄製の大規模な橋を新設し，市街地が郊外へと拡大した</li>
@@ -90,73 +91,42 @@
     </ul>
     <h3 id="都市の風景の変化">都市の風景の変化</h3>
     <ul>
-      <li>東京では，1914年に〔〕が開業，1923年には駅の正面に丸ノ内ビルヂング（丸ビル）が完成した</li>
+      <li>東京では，1914年に<span class="toggle-text">東京駅</span>が開業，1923年には駅の正面に丸ノ内ビルヂング（丸ビル）が完成した</li>
       <li>1925年，環状運転を開始した山手線の駅からは郊外へ向かう私鉄が発着，1927年，東京地下鉄道が開業した</li>
       <li>大阪では都市計画により幅44メートルの街路「御堂筋」が整備され，市営地下鉄の建設も進み，大阪城天守閣が鉄筋コンクリートで建設された</li>
     </ul>
     <h3 id="新中間層の出現">新中間層の出現</h3>
     <ul>
-      <li>企業や官公庁で事務職や専門職に従事する〔〕（サラリーマン）が増加，彼らは新中間層とよばれた</li>
-      <li>都心に通勤して〔〕をえる男性の稼ぎ手，家事と育児に従事する妻，教育を受けて愛情をそそがれる子からなる家族構成が典型的な生活とされた</li>
-      <li>教師・タイピスト・電話交換手・バス車掌など一部の職種では女性の就業が拡大，〔〕とよばれた</li>
+      <li>企業や官公庁で事務職や専門職に従事する<span class="toggle-text">俸給生活者</span>（サラリーマン）が増加，彼らは新中間層とよばれた</li>
+      <li>都心に通勤して<span class="toggle-text">月給</span>をえる男性の稼ぎ手，家事と育児に従事する妻，教育を受けて愛情をそそがれる子からなる家族構成が典型的な生活とされた</li>
+      <li>教師・タイピスト・電話交換手・バス車掌など一部の職種では女性の就業が拡大，<span class="toggle-text">職業婦人</span>とよばれた</li>
     </ul>
     <h3 id="メディアの大衆化">メディアの大衆化</h3>
     <ul>
       <li>新聞が発行部数をのばし，『朝日新聞』と『毎日新聞』は1920年代にいずれも100万部を突破</li>
       <li>新聞小説では中里介山，直木三十五，吉川英治や大佛次郎ら大衆作家が活躍した</li>
-      <li>『〔〕』『改造』などの総合雑誌や『キング』などの大衆雑誌が人気と</li>
+      <li>『<span class="toggle-text">中央公論</span>』『改造』などの総合雑誌や『キング』などの大衆雑誌が人気と</li>
     </ul>
     <h3 id="なり雑誌の刊行もさかんになった">なり，雑誌の刊行もさかんになった</h3>
     <ul>
-      <li>1926年に刊行を開始した『現代日本文学全集』は１冊１円という低価格から「〔〕」とよばれた</li>
+      <li>1926年に刊行を開始した『現代日本文学全集』は１冊１円という低価格から「<span class="toggle-text">円本</span>」とよばれた</li>
     </ul>
     <h3 id="ラジオ放送と都市文化">ラジオ放送と都市文化</h3>
     <ul>
-      <li>ラジオ放送は1925年に始まり，翌年，日本放送協会（〔〕）が発足</li>
-      <li>1928年には〔〕（国民保健体操）の放送が始まり，1932年には聴取契約者数が100万人を突破した</li>
-      <li>映画（活動写真）は無声映画から始まり，のちに有声の「〔〕」が登場した</li>
+      <li>ラジオ放送は1925年に始まり，翌年，日本放送協会（<span class="toggle-text">NHK</span>）が発足</li>
+      <li>1928年には<span class="toggle-text">ラジオ体操</span>（国民保健体操）の放送が始まり，1932年には聴取契約者数が100万人を突破した</li>
+      <li>映画（活動写真）は無声映画から始まり，のちに有声の「<span class="toggle-text">トーキー</span>」が登場した</li>
       <li>SPレコードも人気を博し，舞台では，大阪発祥の吉本演芸や，東京の浅草オペラが人気を集めた</li>
     </ul>
     <h3 id="教育の発展">教育の発展</h3>
     <ul>
       <li>義務教育がほぼゆきわたり，中学校や高等女学校への進学者が増加</li>
-      <li>高等教育では1918年に〔〕が制定され，私立大学が制度化されるとともに各種の学校が増設された</li>
-      <li>初等教育では，児童の自発性や心情の教育を重視した〔〕が提唱され，自由教育運動がおこった
+      <li>高等教育では1918年に<span class="toggle-text">大学令</span>が制定され，私立大学が制度化されるとともに各種の学校が増設された</li>
+      <li>初等教育では，児童の自発性や心情の教育を重視した<span class="toggle-text">自由主義教育</span>が提唱され，自由教育運動がおこった
         <ul>
           <li>…鈴木三重吉が創刊した児童文芸雑誌『赤い鳥』など</li>
         </ul>
       </li>
-    </ul>
-    <h3 id="学問思想では">学問・思想では</h3>
-    <ul>
-      <li>明治期の近代化をふまえ，自省する動きが広がった</li>
-      <li>〔〕は各地の農山漁村で民話や生活を調査し，民俗学を打ち立てた</li>
-      <li>『善の研究』をあらわした西田幾多郎らは京都学派とよばれ，西洋の哲学とは異なる価値観を打ち出した</li>
-      <li>1920年代半ば以降は，〔〕経済学にもとづく日本資本主義への批判が展開された
-        <ul>
-          <li>…〔〕『〔〕』などが格差社会への注目の先がけになった</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="文壇では">文壇では</h3>
-    <ul>
-      <li>自我の尊重や人道主義をかかげた武者小路実篤や志賀直哉らの白樺派，永井荷風や谷崎潤一郎らの耽美派，芥川龍之介や菊池寛らの新思潮派が活躍した</li>
-      <li>〔〕では，小林多喜二『蟹工船』や徳永直『太陽のない街』が発表された</li>
-    </ul>
-    <h3 id="演劇では">演劇では</h3>
-    <ul>
-      <li>1924年に小山内薫が東京に築地小劇場をつくり，知識人や学生の支持をえた</li>
-    </ul>
-    <h3 id="美術では">美術では</h3>
-    <ul>
-      <li>岸田劉生が『麗子微笑』などの油彩画を発表し，横山大観は日本画の近代化をはかった</li>
-      <li>竹久夢二はアール・ヌーボーに影響されたデザインや，女性をモデルにした美人画で人気をえた</li>
-    </ul>
-    <h3 id="音楽では">音楽では</h3>
-    <ul>
-      <li>山田耕筰が日本初の職業的な管弦楽団を組織した</li>
-      <li>作曲家たちは，北原白秋ら詩人と協同で多数の学校唱歌や童謡を制作した</li>
-      <li>宮城道雄は箏曲に洋楽の形式をとりいれて新風をふきこんだ</li>
     </ul>
   </main>
 
