いい感じに編集

--- a/history/term4/print3.html
+++ b/history/term4/print3.html
@@ -13,7 +13,10 @@
   <main class="hist-main">
     <h1 id="日露戦争と帝国日本">日露戦争と帝国日本</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="日露戦争は日本の国際的な地位をどのように変化させたのだろうか">日露戦争は，日本の国際的な地位をどのように変化させたのだろうか。</h3>
+    <p>日露戦争は，日本の国際的な地位をどのように変化させたのだろうか。</p>
+
+    <button class="toggle-all-btn">すべて表示する</button>
+
     <h3 id="列強による帝国主義政策">列強による帝国主義政策</h3>
     <ul>
       <li>19世紀後半，イギリスを追いドイツやアメリカで資本主義が急速に発達，製鉄や電気，機械，鉄道などの産業が成長
