--- a/history/term4/print4.html
+++ b/history/term4/print4.html
@@ -13,7 +13,10 @@
   <main class="hist-main">
     <h1 id="日露戦争後の社会と政治">日露戦争後の社会と政治</h1>
     <h2 id="課題">■課題</h2>
-    <p id="日露戦争後の日本で民衆の不満が高まったのはなぜだろうか">日露戦争後の日本で，民衆の不満が高まったのはなぜだろうか。</p>
+    <p>日露戦争後の日本で，民衆の不満が高まったのはなぜだろうか。</p>
+
+    <button class="toggle-all-btn">すべて表示する</button>
+
     <h3 id="日比谷焼き打ち事件">日比谷焼き打ち事件</h3>
     <ul>
       <li>…日本が賠償金をえられないことが伝えられると，民衆は，警察署や政府系の新聞を焼き打ちした
