--- a/history/term4/print5.html
+++ b/history/term4/print5.html
@@ -13,7 +13,10 @@
   <main class="hist-main">
     <h1 id="都市化重工業化と生活の変化">都市化・重工業化と生活の変化</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="この時期に生じた産業や社会の変化の特徴を考えてみよう">この時期に生じた，産業や社会の変化の特徴を考えてみよう。</h3>
+    <p>この時期に生じた，産業や社会の変化の特徴を考えてみよう。</p>
+
+    <button class="toggle-all-btn">すべて表示する</button>
+
     <h3 id="第一次世界大戦">第一次世界大戦</h3>
     <ul>
       <li>1914年におこった<span class="toggle-text">第一次世界大戦</span>は，1918年まで４年あまりの長期にわたった</li>
