--- a/history/term4/print6.html
+++ b/history/term4/print6.html
@@ -13,10 +13,14 @@
   <main class="hist-main">
     <h1 id="国際社会のなかの日本">国際社会のなかの日本</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="この時期の日本外交が国際社会のなかでめざしたものは何だったのだろうか">この時期の日本外交が，国際社会のなかでめざしたものは何だったのだろうか。</h3>
+    <p>この時期の日本外交が，国際社会のなかでめざしたものは何だったのだろうか。</p>
+
+    <button class="toggle-all-btn">すべて表示する</button>
+
     <h3 id="第２次大隈内閣">第２次大隈内閣</h3>
     <ul>
-      <li>第２次大隈内閣は，1915年，<span class="toggle-text">袁世凱〕政府に軍事的な圧力をかけつつ，二十一か条の要求</span>を示した
+      <li>第２次大隈内閣は，1915年，<span class="toggle-text">袁世凱</span>政府に軍事的な圧力をかけつつ，<span
+          class="toggle-text"></span>二十一か条の要求</span>を示した
         <ul>
           <li>…第一次世界大戦を機に中国での権益の拡大をはかった</li>
         </ul>
@@ -197,7 +201,6 @@
       </li>
       <li>中国では<span class="toggle-text">日貨排斥運動</span>が高まった</li>
     </ul>
-
   </main>
 
   <a href="#" id="page-top">TOP</a>
