--- a/history/term4/print7.html
+++ b/history/term4/print7.html
@@ -13,7 +13,10 @@
   <main class="hist-main">
     <h1 id="中国侵略と戦時体制への移行">中国侵略と戦時体制への移行</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="日本はなぜ中国での戦争を拡大したのだろうかまたその結果日本社会はどのような影響を受けたのだろうか">日本はなぜ中国での戦争を拡大したのだろうか。また，その結果，日本社会はどのような影響を受けたのだろうか。</h3>
+    <p>日本はなぜ中国での戦争を拡大したのだろうか。また，その結果，日本社会はどのような影響を受けたのだろうか。</p>
+
+    <button class="toggle-all-btn">すべて表示する</button>
+
     <h3 id="浜口内閣と関東軍">浜口内閣と関東軍</h3>
     <ul>
       <li>1930年，立憲民政党の浜口内閣は，日中関税協定を結んで，中国の関税自主権を認めた
