--- a/history/term4/print8.html
+++ b/history/term4/print8.html
@@ -13,8 +13,10 @@
   <main class="hist-main">
     <h1 id="戦時体制の強化と第二次世界大戦の展開">戦時体制の強化と第二次世界大戦の展開</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="第二次世界大戦が日本国民や世界の人々にあたえた影響はそれまでの戦争と何が異なっていただろうかこの戦争はどのように始まりどのようにおわったのだろうか">
-      第二次世界大戦が日本国民や世界の人々にあたえた影響は，それまでの戦争と何が異なっていただろうか。この戦争はどのように始まり，どのようにおわったのだろうか。</h3>
+    <p>第二次世界大戦が日本国民や世界の人々にあたえた影響は，それまでの戦争と何が異なっていただろうか。この戦争はどのように始まり，どのようにおわったのだろうか。</p>
+
+    <button class="toggle-all-btn">すべて表示する</button>
+
     <h3 id="ブロック経済圏の構築">ブロック経済圏の構築</h3>
     <ul>
       <li>世界恐慌で主要国は金本位制から離脱した</li>
