--- a/history/term4/print9.html
+++ b/history/term4/print9.html
@@ -13,7 +13,10 @@
   <main class="hist-main">
     <h1 id="占領と日本国憲法の成立">占領と日本国憲法の成立</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="戦後政治や経済社会などの各分野でどのような改革が進められ人々の生活はどのように変化したのだろうか">戦後，政治や経済，社会などの各分野でどのような改革が進められ，人々の生活はどのように変化したのだろうか。</h3>
+    <p>戦後，政治や経済，社会などの各分野でどのような改革が進められ，人々の生活はどのように変化したのだろうか。</p>
+
+    <button class="toggle-all-btn">すべて表示する</button>
+
     <h3 id="アメリカの占領政策">アメリカの占領政策</h3>
     <ul>
       <li>日本がポツダム宣言を受諾すると，日本本土にはアメリカ軍主体の連合国軍が進駐してきた</li>
