--- a/history/term4/print1.html
+++ b/history/term4/print1.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>template</title>
-  <link rel="stylesheet" href="../../style-v1.css" />
+  <link rel="stylesheet" href="../../style.css" />
 </head>
 
 <body>
@@ -16,11 +16,11 @@
     <p>日本の産業革命の特徴は何だろうか。</p>
 
     <button class="toggle-all-btn">すべて表示する</button>
-    
+
     <h3 id="日本における産業革命">日本における産業革命</h3>
     <ul>
       <li>日清戦争と日露戦争前後の時代は，日本国内において近代的な工場での生産が急速に発展する<span class="toggle-text">産業革命
-      </span>の時代であった</li>
+        </span>の時代であった</li>
       <li>松方財政での深刻な不況は，1886年ごろからしだいに回復し，紡績や製糸業などの工業が発展</li>
     </ul>
     <h3 id="紡績製糸業の発展">紡績・製糸業の発展</h3>
@@ -47,7 +47,7 @@
     <h3 id="金本位制の確立">金本位制の確立</h3>
     <ul>
       <li>政府は1897年，日清戦争の賠償金をもとに貨幣制度をあらため，銀本位制にかわり，先進国と同じ<span class="toggle-text">金本位制
-      </span>を確立</li>
+        </span>を確立</li>
     </ul>
     <h3 id="出遅れた重工業の発達">出遅れた重工業の発達</h3>
     <ul>
@@ -79,7 +79,7 @@
     <h3 id="財閥の形成">財閥の形成</h3>
     <ul>
       <li>三井・三菱・住友・安田などの政商は，さまざまな業種に進出することによって金融・貿易・運輸・鉱山などを経営する<span class="toggle-text">財閥
-      </span>を形成するようになった</li>
+        </span>を形成するようになった</li>
       <li>財閥は，官営工場や鉱山の払い下げを受けることもあった</li>
     </ul>
     <h3 id="賃金労働者の増加">賃金労働者の増加</h3>
@@ -98,7 +98,7 @@
       </li>
       <li>1897年，<span class="toggle-text">高野房太郎</span>・<span class="toggle-text">片山潜</span>らは<span
           class="toggle-text">労働組合期成会
-      </span>をつくり，労働組合の結成をよびかけた</li>
+        </span>をつくり，労働組合の結成をよびかけた</li>
     </ul>
     <h3 id="労働争議への政府の対応">労働争議への政府の対応</h3>
     <ul>
@@ -123,13 +123,13 @@
     <ul>
       <li>資本主義の発達で生活はしだいに豊かになったが，副業に従事して収入をおぎなうなど，小作人の生活は困難であった</li>
       <li>地主は，困窮した農民から農地を買い集めて小作地を増大させ，大規模な地主は耕作からはなれて小作料収入に依存する<span class="toggle-text">寄生地主
-      </span>となった</li>
+        </span>となった</li>
       <li>寄生地主は，資産を株式や公債に投資したり，企業をおこしたりして，資本主義との結びつきを深めた</li>
     </ul>
   </main>
 
   <a href="#" id="page-top">TOP</a>
 
-  <script src="../../script-v1.js"></script>
+  <script src="../../script.js"></script>
 
 </body>
