--- a/history/term4/print2.html
+++ b/history/term4/print2.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>template</title>
-  <link rel="stylesheet" href="../../style-v1.css" />
+  <link rel="stylesheet" href="../../style.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <p>社会の変化は，文化や思想にどのような影響をあたえたのだろうか。</p>
 
     <button class="toggle-all-btn">すべて表示する</button>
-    
+
     <h3 id="学校令">学校令</h3>
     <ul>
       <li>1886年，文部大臣森有礼のもとで制定
@@ -67,6 +67,6 @@
 
   <a href="#" id="page-top">TOP</a>
 
-  <script src="../../script-v1.js"></script>
+  <script src="../../script.js"></script>
 
 </body>
