--- a/history/term4/print3.html
+++ b/history/term4/print3.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>template</title>
-  <link rel="stylesheet" href="../../style-v1.css" />
+  <link rel="stylesheet" href="../../style.css" />
 </head>
 
 <body>
@@ -150,6 +150,6 @@
 
   <a href="#" id="page-top">TOP</a>
 
-  <script src="../../script-v1.js"></script>
+  <script src="../../script.js"></script>
 
 </body>
