--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>template</title>
-	<link rel="stylesheet" href="style-v1.css" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -113,5 +113,5 @@
 	<div class="top-bar">
 		<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 	</div>
-	<script src="script-v1.js"></script>
+	<script src="script.js"></script>
 </body>
