更新情報の更新

--- a/index.html
+++ b/index.html
@@ -7,111 +7,104 @@
 </head>
 
 <body>
-
 	<script src="header.js"></script>
 
-	<h1 id="-">テスト対策</h1>
-	<hr>
-	<h2 id="-">更新情報</h2>
-	<p><a href="UPDATE.md">2025/10/29：テーマの変更</a></p>
-	<hr>
-	<h2 id="-">後期末</h2>
-	<hr>
+	<h1>テスト対策</h1>
+	<h2>更新情報</h2>
+	<p><a href="UPDATE.md">2026/01/14：歴史追加</a></p>
+	<h2>後期末</h2>
 	<h3><a href="history/term4/print1.html">歴史プリント</a></h3>
-	<h2 id="-">日課</h2>
+	<h2>日課</h2>
 	<p>タップするとシラバスに飛びます</p>
 	<table>
 		<thead>
 			<tr>
-				<th style="text-align:left">曜日</th>
-				<th style="text-align:left">1限</th>
-				<th style="text-align:left">2限</th>
-				<th style="text-align:left">3限</th>
-				<th style="text-align:left">4限</th>
+				<th>曜日</th>
+				<th>1限</th>
+				<th>2限</th>
+				<th>3限</th>
+				<th>4限</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td style="text-align:left">月</td>
-				<td style="text-align:left"><a
+				<td>月</td>
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0034&amp;year=2024&amp;lang=ja">電気電子回路</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0046&amp;year=2024&amp;lang=ja">数学IIB</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0027&amp;year=2024&amp;lang=ja">体育</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0042&amp;year=2024&amp;lang=ja">コンピューター工学</a>
 				</td>
 			</tr>
 			<tr>
-				<td style="text-align:left">火</td>
-				<td style="text-align:left"><a
+				<td>火</td>
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0045&amp;year=2024&amp;lang=ja">数学IIA</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0037&amp;year=2024&amp;lang=ja">倫理</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0036&amp;year=2024&amp;lang=ja">歴史</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0024&amp;year=2024&amp;lang=ja">課題発見</a>
 				</td>
 			</tr>
 			<tr>
-				<td style="text-align:left">水</td>
-				<td style="text-align:left"><a
+				<td>水</td>
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0047&amp;year=2024&amp;lang=ja">物理I</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0039&amp;year=2024&amp;lang=ja">総合英語IW</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0041&amp;year=2024&amp;lang=ja">集合と論理</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0032&amp;year=2024&amp;lang=ja">化学II</a>
 				</td>
 			</tr>
 			<tr>
-				<td style="text-align:left">木</td>
-				<td style="text-align:left"><a
+				<td>木</td>
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0049&amp;year=2024&amp;lang=ja">情報工学演習I</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0030&amp;year=2024&amp;lang=ja">芸術</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0046&amp;year=2024&amp;lang=ja">数学IIB</a>
 				</td>
-				<td style="text-align:left">HR</td>
+				<td>HR</td>
 			</tr>
 			<tr>
-				<td style="text-align:left">金</td>
-				<td style="text-align:left"><a
+				<td>金</td>
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0035&amp;year=2024&amp;lang=ja">国語II</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0043&amp;year=2024&amp;lang=ja">プログラミング</a>
 				</td>
-				<td style="text-align:left"><a
+				<td><a
 						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0038&amp;year=2024&amp;lang=ja">総合英語IR</a>
 				</td>
-				<td style="text-align:left">-</td>
+				<td>-</td>
 			</tr>
 		</tbody>
 	</table>
 
 	<hr>
-	<h2 id="-">行事予定</h2>
+	<h2>行事予定</h2>
 	<p>タップすると拡大します</p>
 	<p><a href="yotei.html"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
 	<a href="#" id="page-top">TOP</a>
-	<div class="top-bar">
-		<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-	</div>
 	<script src="script.js"></script>
 </body>
