リンクを強化

--- a/index.html
+++ b/index.html
@@ -12,8 +12,34 @@
 	<h1>テスト対策</h1>
 	<h2>更新情報</h2>
 	<p><a href="UPDATE.md">2026/01/14：歴史追加</a></p>
+	<hr>
 	<h2>後期末</h2>
-	<h3><a href="history/term4/print1.html">歴史プリント</a></h3>
+	<h3>歴史</h3>
+	<ul>
+		<li><a href="history/term4/print1.html">プリント</a></li>
+	</ul>
+	<h3>数学IIA</h3>
+	<ul>
+		<li><a href="pdf/math2a.html">過去問</a></li>
+		<li><a href="https://sekibunapp.stradty.com/">積分app</a></li>
+		<li><a href="pdf/math2a_ex.html">まとめプリント</a></li>
+	</ul>
+	<h3>数学IIB</h3>
+	<ul>
+		<li><a href="pdf/math2b.html">過去問</a></li>
+	</ul>
+	<h3>物理</h3>
+	<ul>
+		<li><a href="https://wakariyasui.sakura.ne.jp/#elec">わかりやすい高校物理の部屋</a></li>
+	</ul>
+	<h3>化学</h3>
+	<ul>
+		<li><a href="https://pigboat-don-guri131.ssl-lolipop.jp/">高校化学</a></li>
+	</ul>
+	<!-- <h3>国語</h3>
+	<h3>英語IR</h3>
+	<h3>英語IW</h3> -->
+	<hr>
 	<h2>日課</h2>
 	<p>タップするとシラバスに飛びます</p>
 	<table>
@@ -101,7 +127,6 @@
 		</tbody>
 	</table>
 
-	<hr>
 	<h2>行事予定</h2>
 	<p>タップすると拡大します</p>
 	<p><a href="yotei.html"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
