リンク変更テスト

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 	<h2>後期末</h2>
 	<h3>歴史</h3>
 	<ul>
-		<li><a href="history/term4/print1.html">プリント</a></li>
+		<li><a href="history/term4/print1.pdf">プリント</a></li>
 	</ul>
 	<h3>数学IIA</h3>
 	<ul>
-		<li><a href="pdf/math2a.html">過去問</a></li>
+		<li><a href="pdf/math2a.pdf">過去問</a></li>
 		<li><a href="https://sekibunapp.stradty.com/">積分app</a></li>
-		<li><a href="pdf/math2a_ex.html">まとめプリント</a></li>
+		<li><a href="pdf/math2a_ex.pdf">まとめプリント</a></li>
 	</ul>
 	<h3>数学IIB</h3>
 	<ul>
-		<li><a href="pdf/math2b.html">過去問</a></li>
+		<li><a href="pdf/math2b.pdf">過去問</a></li>
 	</ul>
 	<h3>物理</h3>
 	<ul>
@@ -129,7 +129,7 @@
 
 	<h2>行事予定</h2>
 	<p>タップすると拡大します</p>
-	<p><a href="yotei.html"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
+	<p><a href="yotei.pdf"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
 	<a href="#" id="page-top">TOP</a>
 	<script src="script.js"></script>
 </body>
