--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h2>後期末</h2>
 	<h3>歴史</h3>
 	<ul>
-		<li><a href="history/term4/print1.pdf">プリント</a></li>
+		<li><a href="history/term4/print1.html">プリント</a></li>
 	</ul>
 	<h3>数学IIA</h3>
 	<ul>
