--- a/history/term4/print5.html
+++ b/history/term4/print5.html
@@ -21,7 +21,7 @@
     <ul>
       <li>1914年におこった<span class="toggle-text">第一次世界大戦</span>は，1918年まで４年あまりの長期にわたった</li>
       <li>産業化が進んだヨーロッパ各国は，より強力な兵器を大量に生産して戦場に送ることで勝利をえようとした</li>
-      <li>国家の持つすべての人的・物的資源を動員して戦う「<span class="toggle-text">総戦力</span>」が展開され，非戦闘員も戦争にまきこまれた
+      <li>国家の持つすべての人的・物的資源を動員して戦う「<span class="toggle-text">総力戦</span>」が展開され，非戦闘員も戦争にまきこまれた
         <ul>
           <li>…ぼう大な犠牲者と，深刻な社会の疲弊をまねいた</li>
         </ul>
