リンク修正

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 	<h2>行事予定</h2>
 	<p>タップすると拡大します</p>
-	<p><a href="yotei.pdf"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
+	<p><a href="yotei.html"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
 	<a href="#" id="page-top">TOP</a>
 	<script src="script.js"></script>
 </body>
